2009-10-16

	* libsylph/codeconv.c: made codeconv module thread-safe.
	* src/query_search.c: update search window using timer.

2009-10-13

	* src/plugin.[ch]
	  src/main.c: added new APIs: syl_plugin_summary_lock(),
	  syl_plugin_summary_unlock() and syl_plugin_summary_is_locked().

2009-10-13

	* libsylph/utils.c
	  libsylph/imap.c
	  libsylph/socket.c
	  src/query_search.c: use g_atomic_int_{get,set} for thread
	  terminate flags.

2009-10-09

	* src/send_message.c: made send dialog non-modal.

2009-10-08

	* src/query_search.c: destroy async queue when finished.

2009-10-08

	* makewin32.sh: added --enable-threads.

2009-10-08

	* libsylph/imap.c
	  src/query_search.c: fixed compilation without thread support.

2009-10-08

	* src/query_search.c: execute query search in another thread.

2009-10-07

	* src/inc.c: inc_drop_message(): fixed a bug that MIME flag was not
	  properly set on receiving.

2009-10-07

	* libsylph/mh.c: mh_get_mtime(): fixed memory leak.
	  Added global locks to each functions.

2009-10-06

	* src/rpop3.c: added missing GDK locks.

2009-10-05

	* libsylph/utils.c
	  libsylph/pop.c
	  libsylph/socket.c
	  src/logwindow.c: removed some debug prints.
	* libsylph/session.c: uncommented code block for unix.

2009-10-05

	* libsylph/imap.c: imap_session_destroy(): free thread pool.

2009-10-05

	* src/main.c: display status on loading plug-ins.

2009-10-02

	* libsylph/imap.c: execute imap_get_uncached_messages() in another
	  thread.

2009-10-02

	* src/trayicon.c
	  src/syldap.c
	  src/summaryview.c
	  src/folderview.c: added missing locks on idle callbacks.

2009-10-01

	* libsylph/imap.c: reimplemented using GThreadPool.

2009-10-01

	* libsylph/imap.c: refactored.

2009-09-30

	* libsylph/imap.c: execute imap_cmd_fetch() in another thread.

2009-09-30

	* libsylph/utils.[ch]
	  src/logwindow.c: added log_flush() function.
	* libsylph/imap.c: execute imap_cmd_ok() in another thread.

2009-09-30

	* libsylph/socket.[ch]