@@ -1,5 +1,9 @@
 2009-10-16
 
+	* src/plugin.[ch]: properly check plug-in version.
+
+2009-10-16
+
 	* libsylph/codeconv.c: made codeconv module thread-safe.
 	* src/query_search.c: update search window using timer.
 
